test/cluster/ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-1
spec:
  rules:
  - host: ingress-1.localhost
    http:
      paths:
      - backend:
          service:
            name: sbc
            port:
              name: http
        path: /
        pathType: Prefix
