test/cluster/ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-2
spec:
  rules:
  - host: "*.ingress-2.localhost"
    http:
      paths:
      - backend:
          service:
            name: svc
            port:
              name: http
        path: /
        pathType: Prefix
