test/cluster/ingress-4.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-4
spec:
  rules:
  - host: sub.ingress-4.localhost
    http:
      paths:
      - backend:
          service:
            name: svc
            port:
              name: http
        path: /
        pathType: Prefix
